# freeze-frame

./: Cargo.toml
freeze-frame-core/: Cargo.toml
freeze-frame-engine/: Cargo.toml
freeze-frame-ui/: Cargo.toml
freeze-frame-ui/src/: main.rs
src/: data.rs  main.rs  message.rs  view.rs
src/canvas/: canvas.rs
src/configs/: window.rs
src/palette/: palette.rs
src/styles/: mod.rs
src/styles/button/: mod.rs
src/styles/panel/: mod.rs
src/styles/slider/: mod.rs
src/styles/text_input/: mod.rs
src/tool/brush/: freehand.rs  mod.rs
src/tools/: mod.rs
src/tools/drawing/: drawable.rs  mod.rs  painting.rs  strokes.rs
src/tools/filters/: mod.rs
src/utils/: colors.rs  mod.rs  svg.rs
src/views/main_view/: canvas.rs  header.rs  mod.rs  property.rs  timeline.rs
src/widgets/: canvas.rs  header.rs  layers.rs  mod.rs  property.rs  timeline.rs
src/widgets/canvas/: canvas_style.rs  mod.rs
src/widgets/canvas/drawing/: strokes.rs
src/widgets/color_palette/: mod.rs
src/widgets/components/: button_color.rs  button_icon.rs  color_palette.rs  mod.rs  slider.rs  text_input.rs
src/widgets/header/: header.rs  header_style.rs  mod.rs
src/widgets/header/brush_tools/: brush_tools.rs  mod.rs
src/widgets/header/color_palette/: color_palette.rs  mod.rs
src/widgets/header/extra_tools/: grid.rs  mod.rs
src/widgets/header/scene_title/: mod.rs  scene_title.rs
src/widgets/property/: mod.rs  property_style.rs
src/widgets/style/: mod.rs
src/widgets/timeline/: mod.rs  timeline_style.rs
src/widgets/tools/drawing/: drawable.rs  mod.rs  strokes.rs
