[package]
name = "freeze_frame"
version = "0.1.0"
authors = ["Asi7ho <46624642+Asi7ho@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
# version = "0.3.0"
git = "https://github.com/iced-rs/iced"
features = ["canvas", "svg"]

[dependencies.rand]
version = "0.8.4"