[package]
name = "freeze_frame"
version = "0.1.0"
authors = ["Asi7ho <46624642+Asi7ho@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.iced]
# https://github.com/iced-rs/iced
version = "^0.8.0"
features = ["canvas", "svg"]

[dependencies.iced_aw]
# https://github.com/iced-rs/iced
version = "^0.4.1"
default-features = false
features = ["color_picker"]

[dependencies.rand]
# https://github.com/rust-random/rand
version = "^0.8.5"

[dependencies.log]
# https://github.com/rust-lang/log
version = "^0.4.17"
features = ["release_max_level_off"]

[dependencies.env_logger]
# https://github.com/env-logger-rs/env_logger
version = "^0.10.0"


[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
